@@ -1,5 +1,6 @@
 package com.github.scribejava.core.model;
 
+import com.github.scribejava.core.builder.api.OAuth1SignatureType;
 import com.github.scribejava.core.httpclient.HttpClient;
 import com.github.scribejava.core.httpclient.HttpClientConfig;
 import java.io.IOException;
@@ -13,7 +14,12 @@ public class OAuthConfig {
     private final String apiKey;
     private final String apiSecret;
     private final String callback;
-    private final SignatureType signatureType;
+    /**
+     * @deprecated override or change in Pull Request
+     * {@link com.github.scribejava.core.builder.api.DefaultApi10a#getSignatureType()}
+     */
+    @Deprecated
+    private OAuth1SignatureType signatureType;
     private final String scope;
     private final OutputStream debugStream;
     private final String state;
@@ -24,16 +30,44 @@ public class OAuthConfig {
     private HttpClient httpClient;
 
     public OAuthConfig(String key, String secret) {
-        this(key, secret, null, null, null, null, null, null, null, null, null);
+        this(key, secret, null, null, null, null, null, null, null, null);
     }
 
-    public OAuthConfig(String apiKey, String apiSecret, String callback, SignatureType signatureType, String scope,
-            OutputStream debugStream, String state, String responseType, String userAgent,
+    /**
+     * @param apiKey apiKey
+     * @param apiSecret apiSecret
+     * @param callback callback
+     * @param signatureType signatureType
+     * @param scope scope
+     * @param debugStream debugStream
+     * @param state state
+     * @param responseType responseType
+     * @param userAgent userAgent
+     * @param httpClientConfig httpClientConfig
+     * @param httpClient httpClient
+     *
+     * @deprecated use {@link #OAuthConfig(java.lang.String, java.lang.String, java.lang.String, java.lang.String,
+     * java.io.OutputStream, java.lang.String, java.lang.String, java.lang.String,
+     * com.github.scribejava.core.httpclient.HttpClientConfig, com.github.scribejava.core.httpclient.HttpClient)}
+     * <br>
+     * without OAuth1SignatureType param. to change OAuth1SignatureType override or change in Pull Request
+     * <br>{@link com.github.scribejava.core.builder.api.DefaultApi10a#getSignatureType()}
+     */
+    @Deprecated
+    public OAuthConfig(String apiKey, String apiSecret, String callback, OAuth1SignatureType signatureType,
+            String scope, OutputStream debugStream, String state, String responseType, String userAgent,
             HttpClientConfig httpClientConfig, HttpClient httpClient) {
+        this(apiKey, apiSecret, callback, scope, debugStream, state, responseType, userAgent, httpClientConfig,
+                httpClient);
+        this.signatureType = signatureType;
+    }
+
+    public OAuthConfig(String apiKey, String apiSecret, String callback, String scope, OutputStream debugStream,
+            String state, String responseType, String userAgent, HttpClientConfig httpClientConfig,
+            HttpClient httpClient) {
         this.apiKey = apiKey;
         this.apiSecret = apiSecret;
         this.callback = callback;
-        this.signatureType = signatureType;
         this.scope = scope;
         this.debugStream = debugStream;
         this.state = state;
@@ -55,7 +89,14 @@ public class OAuthConfig {
         return callback;
     }
 
-    public SignatureType getSignatureType() {
+    /**
+     * @return configured OAuth1SignatureType to override from API
+     *
+     * @deprecated override or change in Pull Request
+     * {@link com.github.scribejava.core.builder.api.DefaultApi10a#getSignatureType()}
+     */
+    @Deprecated
+    public OAuth1SignatureType getSignatureType() {
         return signatureType;
     }
 
