@@ -1,5 +1,9 @@
 package com.github.scribejava.core.model;
 
+/**
+ * @deprecated renamed to {@link com.github.scribejava.core.builder.api.OAuth1SignatureType}
+ */
+@Deprecated
 public enum SignatureType {
 
     Header,
