@@ -1,7 +1,7 @@
 package com.github.scribejava.core.oauth;
 
 import com.github.scribejava.core.builder.api.DefaultApi20;
-import com.github.scribejava.core.builder.api.SignatureType;
+import com.github.scribejava.core.builder.api.OAuth2SignatureType;
 import com.github.scribejava.core.model.OAuthConfig;
 
 class OAuth20ApiUnit extends DefaultApi20 {
@@ -22,7 +22,7 @@ class OAuth20ApiUnit extends DefaultApi20 {
     }
 
     @Override
-    public SignatureType getSignatureType() {
-        return SignatureType.BEARER_URI_QUERY_PARAMETER;
+    public OAuth2SignatureType getSignatureType() {
+        return OAuth2SignatureType.BEARER_URI_QUERY_PARAMETER;
     }
 }
